--- a/.github/workflows/azure-deploy.yml
+++ b/.github/workflows/azure-deploy.yml
@@ -16,9 +16,9 @@ jobs:
     - name: Log in to Azure Container Registry
       uses: docker/login-action@v3
       with:
-        registry: ${{ secrets.ACR_LOGIN_SERVER }}
-        username: ${{ secrets.ACR_USERNAME }}
-        password: ${{ secrets.ACR_PASSWORD }}
+        registry: ${{ sentimentregistrysaiku.azurecr.io }}
+        username: ${{ sentimentregistrysaiku }}
+        password: ${{ JdMkSp9JpgZK7IZFhOJ+Uz2M8VzKpfOmt72JY7mKlB+ACRDdMuVS }}
 
     - name: Build Docker image
       run: |
