--- a/.github/workflows/azure-deploy.yml
+++ b/.github/workflows/azure-deploy.yml
@@ -16,20 +16,20 @@ jobs:
     - name: Log in to Azure Container Registry
       uses: docker/login-action@v3
       with:
-        registry: ${{ sentimentregistrysaiku.azurecr.io }}
+        registry: ${{ sentimentregistrysaiku }}
         username: ${{ sentimentregistrysaiku }}
         password: ${{ JdMkSp9JpgZK7IZFhOJ+Uz2M8VzKpfOmt72JY7mKlB+ACRDdMuVS }}
 
     - name: Build Docker image
       run: |
-        docker build -t ${{ secrets.ACR_LOGIN_SERVER }}/sentiment_app:${{ github.sha }} .
+        docker build -t ${{ sentimentregistrysaiku.azurecr.io }}/sentiment_app:${{ github.sha }} .
 
     - name: Push Docker image to ACR
       run: |
-        docker push ${{ secrets.ACR_LOGIN_SERVER }}/sentiment_app:${{ github.sha }}
+        docker push ${{ sentimentregistrysaiku.azurecr.io }}/sentiment_app:${{ github.sha }}
 
     - name: Deploy to Azure App Service
       uses: azure/webapps-deploy@v3
       with:
-        app-name: ${{ secrets.AZURE_WEBAPP_NAME }}
-        images: ${{ secrets.ACR_LOGIN_SERVER }}/sentiment_app:${{ github.sha }}
+        app-name: ${{ sentimentdockerapp }}
+        images: ${{ sentimentregistrysaiku.azurecr.io }}/sentiment_app:${{ github.sha }}
