--- a/.github/workflows/azure-deploy.yml
+++ b/.github/workflows/azure-deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy to Azure Web App (Docker)
+name: Deploy Docker App to Azure
 
 on:
   push:
@@ -10,26 +10,12 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-    - name: Log in to Azure Container Registry
-      uses: docker/login-action@v3
-      with:
-        registry: ${{ sentimentregistrysaiku }}
-        username: ${{ sentimentregistrysaiku }}
-        password: ${{ JdMkSp9JpgZK7IZFhOJ+Uz2M8VzKpfOmt72JY7mKlB+ACRDdMuVS }}
-
-    - name: Build Docker image
-      run: |
-        docker build -t ${{ sentimentregistrysaiku.azurecr.io }}/sentiment_app:${{ github.sha }} .
-
-    - name: Push Docker image to ACR
-      run: |
-        docker push ${{ sentimentregistrysaiku.azurecr.io }}/sentiment_app:${{ github.sha }}
-
-    - name: Deploy to Azure App Service
-      uses: azure/webapps-deploy@v3
-      with:
-        app-name: ${{ sentimentdockerapp }}
-        images: ${{ sentimentregistrysaiku.azurecr.io }}/sentiment_app:${{ github.sha }}
+      - name: Log in to Azure Web App (Publish Profile)
+        uses: azure/webapps-deploy@v2
+        with:
+          app-name: "sentimentdockerapp"
+          publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
+          images: "sentimentregistrysaiku.azurecr.io/sentiment_app:v3"
