Fix: torch installation for Azure deployment

--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ transformers==4.39.3
 pymongo
 python-dotenv
 gunicorn
-torch==2.1.0+cpu -f https://download.pytorch.org/whl/cpu
+torch==2.1.0+cpu --extra-index-url https://download.pytorch.org/whl/cpu
 python-jose[cryptography]
 passlib[bcrypt]
 azure-storage-blob
@@ -13,6 +13,6 @@ pandas
 email-validator
 openpyxl
 azure-communication-email==1.0.0
-tiktoken
 azure-core
+tiktoken
 sentencepiece
